WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255415
REGRESSION (
262853@main
): [iOS] 2 fast/scrolling/ios/click-events-during-momentum-scroll-* tests consistently failing
https://bugs.webkit.org/show_bug.cgi?id=255415
Summary
REGRESSION (262853@main): [iOS] 2 fast/scrolling/ios/click-events-during-mome...
Ryan Haddad
Reported
2023-04-13 13:35:53 PDT
The following two tests are consistently failing on iOS bots after
https://commits.webkit.org/262853@main
fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame.html fast/scrolling/ios/click-events-during-momentum-scroll-in-overflow.html --- /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame-expected.txt +++ /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame-actual.txt @@ -4,7 +4,9 @@ PASS document.scrollingElement.scrollTop passed 1000 +FAIL Observed unexpected click event. PASS successfullyParsed is true +Some tests failed. TEST COMPLETE --- /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/fast/scrolling/ios/click-events-during-momentum-scroll-in-overflow-expected.txt +++ /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/fast/scrolling/ios/click-events-during-momentum-scroll-in-overflow-actual.txt @@ -4,7 +4,9 @@ PASS scroller.scrollTop passed 500 +FAIL Observed unexpected click event. PASS successfullyParsed is true +Some tests failed. TEST COMPLETE
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast%2Fscrolling%2Fios%2Fclick-events-during-momentum-scroll-in-main-frame.html&test=fast%2Fscrolling%2Fios%2Fclick-events-during-momentum-scroll-in-overflow.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-13 13:36:12 PDT
<
rdar://problem/108011669
>
Wenson Hsieh
Comment 2
2023-04-13 18:46:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12721
EWS
Comment 3
2023-04-14 07:34:01 PDT
Committed
262963@main
(c3c2a3059b1e): <
https://commits.webkit.org/262963@main
> Reviewed commits have been landed. Closing PR #12721 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug